# FileParser

./: CMakeLists.txt  FileReader.cpp  FileReader.h  README.md  Reader.h  ThreadWorker.cpp  ThreadWorker.h  Writer.cpp  Writer.h  main.cpp
files/: TEST1 — копия (7).txt  TEST1 — копия — копия (7).txt  TEST1 — копия — копия.txt  allDel.txt
